Moving go files into src folder

--- a/docker/alpine/Dockerfile
+++ b/docker/alpine/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.19-alpine
 
 WORKDIR /app
-COPY go.mod hello.go ./
+COPY src/go.mod src/hello.go ./
 RUN go build .
 
 CMD [ "/app/hello" ]
