--- a/docker/debian/Dockerfile
+++ b/docker/debian/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.19-bullseye
 
 WORKDIR /app
 
-COPY go.mod hello.go ./
+COPY src/go.mod src/hello.go ./
 RUN go build .
 
 CMD [ "/app/hello" ]
