--- a/docker/scratch/Dockerfile
+++ b/docker/scratch/Dockerfile
@@ -1,12 +1,8 @@
 FROM golang:1.19-alpine as build
-
 WORKDIR /app
 COPY src/go.mod src/hello.go ./
-RUN go build .
+RUN go build
 
 FROM scratch
-
-WORKDIR /app
-COPY --from=build /app/hello ./
-
+COPY --from=build /app/hello /app/
 CMD [ "/app/hello" ]
