--- a/docker/debian/Dockerfile
+++ b/docker/debian/Dockerfile
@@ -3,6 +3,7 @@ FROM golang:1.19-bullseye
 WORKDIR /app
 
 COPY src/go.mod src/hello.go ./
-RUN go build .
+RUN go build
+RUN rm go.mod hello.go
 
 CMD [ "/app/hello" ]
